SERVER-55173 Skip releasing cursors during shutdown to avoid segmentation fault

(cherry picked from commit bc940d6b0adc9254b62e9daf9c92d2c92f8b083d)
(cherry picked from commit 7a074786f4048e3ac304dfbab12a5fafd5f14f00)